unpackaged/main/default/objects/Talcum_Powder__c/Talcum_Powder__c.object-meta.xml
<CustomObject>
    <label>Talcum Powder</label>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>Talcum Powder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talcum Powder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>