unpackaged/main/default/objects/Talcum_Powder__c/fields/Affirm_No_Other_Representation__c.field-meta.xml
<CustomField>
    <fullName>Affirm_No_Other_Representation__c</fullName>
    <description>Are you willing to affirm, under penalty, that you have not sought legal representation or advice from any other law firm or attorney for this specific matter?</description>
    <label>Affirm No Other Representation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>