unpackaged/main/default/objects/Talcum_Powder__c/fields/Closing_Note__c.field-meta.xml
<CustomField>
    <fullName>Closing_Note__c</fullName>
    <description>CLOSING NOTE (IF ANY)</description>
    <inlineHelpText>CLOSING NOTE (IF ANY)</inlineHelpText>
    <label>Closing Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>