unpackaged/main/default/objects/Talcum_Powder__c/fields/DATE_CLASSIFIER_FOR_SOL__c.field-meta.xml
<CustomField>
    <fullName>DATE_CLASSIFIER_FOR_SOL__c</fullName>
    <description>Select if Injured Party&#39;s Date of Diagnosis is Before May 2020 or After May 2020</description>
    <label>DATE CLASSIFIER FOR SOL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before May 2020</fullName>
            </value>
            <value>
                <fullName>After May 2020</fullName>
            </value>
            <value>
                <fullName>Before May 2021</fullName>
            </value>
            <value>
                <fullName>After May 2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>