unpackaged/main/default/objects/Talcum_Powder__c/fields/FX_How_many_drs_last_10_years__c.field-meta.xml
<CustomField>
    <fullName>FX_How_many_drs_last_10_years__c</fullName>
    <description>Converts Question 55 from picklist to number (i.e. Limiting your answer to primary care, gynecology and oncology healthcare providers, identify each doctor or other health care provider who you have seen for medical care and treatment from the ten (10) years prior to your ovarian cancer diagnosis to the p)</description>
    <formula>CASE(Question_55__c,
					&quot;1&quot;, 1,
					&quot;2&quot;, 2,
					&quot;3&quot;, 3,
					&quot;4&quot;, 4,
					&quot;5&quot;, 5,
					0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converts Question 55 from picklist to number (i.e. Limiting your answer to primary care, gynecology and oncology healthcare providers, identify each doctor or other health care provider who you have seen for medical care and treatment from the ten (10) years prior to your ovarian cancer diagnosis to the p)</inlineHelpText>
    <label>How many drs last 10 years?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>