unpackaged/main/default/objects/Talcum_Powder__c/fields/FX_How_Many_Hospitalizations__c.field-meta.xml
<CustomField>
    <fullName>FX_How_Many_Hospitalizations__c</fullName>
    <description>Converts Question 120 from picklist to number (i.e. Limiting your response to visits for issues related to cancer and to gynecologic issues other than pregnancy, identify each hospital, clinic, or health care facility where you were hospitalized (inpatient, out-patient, or emergency room visit) from the (1)</description>
    <formula>CASE(Question_120__c,
&quot;1&quot;, 1,
&quot;2&quot;, 2,
&quot;3&quot;, 3,
&quot;4&quot;, 4,
&quot;5&quot;, 5,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converts Question 120 from picklist to number (i.e. Limiting your response to visits for issues related to cancer and to gynecologic issues other than pregnancy, identify each hospital, clinic, or health care facility where you were hospitalized (inpatient, out-patient, or emergency room visit) from the (1)</inlineHelpText>
    <label>How Many Hospitalizations?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>