unpackaged/main/default/objects/Talcum_Powder__c/fields/FX_How_Many_OC_Providers__c.field-meta.xml
<CustomField>
    <fullName>FX_How_Many_OC_Providers__c</fullName>
    <description>Converts Question 101 from picklist to number (i.e. If any of your healthcare providers who you have seen in relation to treatment and care of ovarian cancer or any other form of cancer were not identified previously, please identify how many such providers)</description>
    <formula>CASE(Question_101__c,
&quot;1&quot;, 1,
&quot;2&quot;, 2,
&quot;3&quot;, 3,
&quot;4&quot;, 4,
&quot;5&quot;, 5,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converts Question 101 from picklist to number (i.e. If any of your healthcare providers who you have seen in relation to treatment and care of ovarian cancer or any other form of cancer were not identified previously, please identify how many such providers)</inlineHelpText>
    <label>How Many OC Providers?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>