unpackaged/main/default/objects/Talcum_Powder__c/fields/FX_How_many_Pharmacies__c.field-meta.xml
<CustomField>
    <fullName>FX_How_many_Pharmacies__c</fullName>
    <description>Converts Question 166 from picklist to number (i.e. How many Pharmacies have you used over the last ten years?)</description>
    <formula>CASE(Question_166__c,
&quot;1&quot;, 1,
&quot;2&quot;, 2,
&quot;3&quot;, 3,
&quot;4&quot;, 4,
&quot;5&quot;, 5,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converts Question 166 from picklist to number (i.e. How many Pharmacies have you used over the last ten years?)</inlineHelpText>
    <label>How many Pharmacies?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>