unpackaged/main/default/objects/Talcum_Powder__c/fields/Have_you_been_formally_released__c.field-meta.xml
<CustomField>
    <fullName>Have_you_been_formally_released__c</fullName>
    <description>Have you been formally released?</description>
    <label>Have you been formally released?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>