unpackaged/main/default/objects/Talcum_Powder__c/fields/How_many_rels_breast_or_ovary_cancer__c.field-meta.xml
<CustomField>
    <fullName>How_many_rels_breast_or_ovary_cancer__c</fullName>
    <formula>CASE(Question_36__c,
&quot;1&quot;, 1,
&quot;2&quot;, 2,
&quot;3&quot;, 3,
&quot;3+&quot;, 4,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How many rels breast or ovary cancer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>