unpackaged/main/default/objects/Talcum_Powder__c/fields/How_many_rels_with_BRCA__c.field-meta.xml
<CustomField>
    <fullName>How_many_rels_with_BRCA__c</fullName>
    <formula>CASE(Question_50__c,
&quot;1&quot;, 1,
&quot;2&quot;, 2,
&quot;2+&quot;, 3,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How many rels with BRCA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>