unpackaged/main/default/objects/Talcum_Powder__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Talcum Powder</relationshipLabel>
    <relationshipName>Talcum_Powder</relationshipName>
    <type>Lookup</type>
</CustomField>