unpackaged/main/default/objects/Talcum_Powder__c/fields/JJBP_or_JJSS_Usage_on_Genital_Area__c.field-meta.xml
<CustomField>
    <fullName>JJBP_or_JJSS_Usage_on_Genital_Area__c</fullName>
    <description>Did you use JJ&#39;s Baby Powder or Shower to Shower on Genital Area?</description>
    <label>JJBP or JJSS Usage on Genital Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JJBP</fullName>
            </value>
            <value>
                <fullName>JJSS</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>