unpackaged/main/default/objects/Talcum_Powder__c/fields/Lawyer_To_Terminate_Name_and_Info__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_To_Terminate_Name_and_Info__c</fullName>
    <description>Please provide the name and contact information for the lawyer you wish to terminate:</description>
    <inlineHelpText>Please provide the name and contact information for the lawyer you wish to terminate:</inlineHelpText>
    <label>Lawyer To Terminate Name and Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>