unpackaged/main/default/objects/Talcum_Powder__c/fields/Patient_Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Patient_Date_of_Death__c</fullName>
    <label>Patient Date of Death</label>
    <type>Date</type>
</CustomField>