unpackaged/main/default/objects/Talcum_Powder__c/fields/Question_100__c.field-meta.xml
<CustomField>
    <fullName>Question_100__c</fullName>
    <description>Last year of visit to provider? (Prov 5)</description>
    <inlineHelpText>Last year of visit to provider? (Prov 5)</inlineHelpText>
    <label>Question 100</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>