unpackaged/main/default/objects/Talcum_Powder__c/fields/Question_101__c.field-meta.xml
<CustomField>
    <fullName>Question_101__c</fullName>
    <description>If any of your healthcare providers who you have seen in relation to treatment and care of ovarian cancer or any other form of cancer were not identified previously, please identify how many such providers</description>
    <inlineHelpText>If any of your healthcare providers who you have seen in relation to treatment and care of ovarian cancer or any other form of cancer were not identified previously, please identify how many such providers</inlineHelpText>
    <label>Question 101</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>