unpackaged/main/default/objects/Talcum_Powder__c/fields/Question_102__c.field-meta.xml
<CustomField>
    <fullName>Question_102__c</fullName>
    <description>Other Cancer Provider Name? (OC Prov 1)</description>
    <inlineHelpText>Other Cancer Provider Name? (OC Prov 1)</inlineHelpText>
    <label>Question 102</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>