unpackaged/main/default/objects/Talcum_Powder__c/fields/SOL_ACCEPTABLE_STATES__c.field-meta.xml
<CustomField>
    <fullName>SOL_ACCEPTABLE_STATES__c</fullName>
    <description>What state are you currently residing?</description>
    <label>SOL Accept States_Caller Current States</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Maine</fullName>
            </value>
            <value>
                <fullName>Minnesota</fullName>
            </value>
            <value>
                <fullName>Missouri</fullName>
            </value>
            <value>
                <fullName>Nebraska</fullName>
            </value>
            <value>
                <fullName>North Dakota</fullName>
            </value>
            <value>
                <fullName>Wyoming</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>