unpackaged/main/default/objects/Talcum_Powder__c/fields/SOL_STATUS__c.field-meta.xml
<CustomField>
    <fullName>SOL_STATUS__c</fullName>
    <description>SOL STATUS</description>
    <label>SOL STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WITHIN SOL</fullName>
            </value>
            <value>
                <fullName>SOL EXPIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>