unpackaged/main/default/objects/Talcum_Powder__c/fields/What_is_the_date_of_the_procedure_TLit__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_date_of_the_procedure_TLit__c</fullName>
    <description>What is the date of the procedure?</description>
    <label>What is the date of the procedure (TLit)</label>
    <type>Date</type>
</CustomField>