unpackaged/main/default/objects/Talcum_Powder__c/fields/When_did_you_first_start_using__c.field-meta.xml
<CustomField>
    <fullName>When_did_you_first_start_using__c</fullName>
    <label>When did you first start using tp?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 years have passed between first use and being diagnosed</fullName>
            </value>
            <value>
                <fullName>10 years have NOT passed between first use and being diagnosed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>