unpackaged/main/default/objects/Talcum_Powder__c/fields/Why_formally_released_from_another_firm__c.field-meta.xml
<CustomField>
    <fullName>Why_formally_released_from_another_firm__c</fullName>
    <description>If you have been formally released from another firm, please provide information as to why:</description>
    <inlineHelpText>If you have been formally released from another firm, please provide information as to why:</inlineHelpText>
    <label>Why formally released from another firm?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>