unpackaged/main/default/objects/Talcum_Powder__c/fields/Wish_to_terminate_current_representation__c.field-meta.xml
<CustomField>
    <fullName>Wish_to_terminate_current_representation__c</fullName>
    <description>Do you wish to terminate your current representation?</description>
    <label>Wish to terminate current representation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>