unpackaged/main/default/objects/Talcum_Powder__c/fields/Working_with_another_law_firm__c.field-meta.xml
<CustomField>
    <fullName>Working_with_another_law_firm__c</fullName>
    <description>Are you currently working with another law firm?</description>
    <label>Working with another law firm?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>